# ImageColourPicker

./: CMakeLists.txt  ImageColourPicker.sln
ImageColourPicker/: ImageColourPicker.vcxproj
src/: CMakeLists.txt
src/image_colour_picker/: CMakeLists.txt  image_colour_picker.vcxproj
tests/: tests.vcxproj
